Package_Tools/include-C/SFML/Audio/Music.pp

{////////////////////////////////////////////////////////// }
procedure sfMusic_setAttenuation(music:PsfMusic; attenuation:single);cdecl;external;
{////////////////////////////////////////////////////////// }
{/ \brief Change the current playing position of a music }
{/ }
{/ The playing position can be changed when the music is }
{/ either paused or playing. }
{/ }
{/ \param music      Music object }
{/ \param timeOffset New playing position }
{/ }
{////////////////////////////////////////////////////////// }
procedure sfMusic_setPlayingOffset(music:PsfMusic; timeOffset:TsfTime);cdecl;external;
{////////////////////////////////////////////////////////// }
{/ \brief Get the pitch of a music }
{/ }
{/ \param music Music object }
{/ }
{/ \return Pitch of the music }
{/ }
{////////////////////////////////////////////////////////// }
(* Const before type ignored *)
function sfMusic_getPitch(music:PsfMusic):single;cdecl;external;
{////////////////////////////////////////////////////////// }
{/ \brief Get the volume of a music }
{/ }
{/ \param music Music object }
{/ }
{/ \return Volume of the music, in the range [0, 100] }
{/ }
{////////////////////////////////////////////////////////// }
(* Const before type ignored *)
function sfMusic_getVolume(music:PsfMusic):single;cdecl;external;
{////////////////////////////////////////////////////////// }
{/ \brief Get the 3D position of a music in the audio scene }
{/ }
{/ \param music Music object }
{/ }
{/ \return Position of the music in the world }
{/ }
{////////////////////////////////////////////////////////// }
(* Const before type ignored *)
function sfMusic_getPosition(music:PsfMusic):TsfVector3f;cdecl;external;
{////////////////////////////////////////////////////////// }
{/ \brief Tell whether a music's position is relative to the }
{/        listener or is absolute }
{/ }
{/ \param music Music object }
{/ }
{/ \return sfTrue if the position is relative, sfFalse if it's absolute }
{/ }
{////////////////////////////////////////////////////////// }
(* Const before type ignored *)
function sfMusic_isRelativeToListener(music:PsfMusic):TsfBool;cdecl;external;
{////////////////////////////////////////////////////////// }
{/ \brief Get the minimum distance of a music }
{/ }
{/ \param music Music object }
{/ }
{/ \return Minimum distance of the music }
{/ }
{////////////////////////////////////////////////////////// }
(* Const before type ignored *)
function sfMusic_getMinDistance(music:PsfMusic):single;cdecl;external;
{////////////////////////////////////////////////////////// }
{/ \brief Get the attenuation factor of a music }
{/ }
{/ \param music Music object }
{/ }
{/ \return Attenuation factor of the music }
{/ }
{////////////////////////////////////////////////////////// }
(* Const before type ignored *)
function sfMusic_getAttenuation(music:PsfMusic):single;cdecl;external;
{$endif}
{ SFML_MUSIC_H }

implementation


end.
